logs/vmonere.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/dominfo'...
Listing './lib/python3.5/site-packages/framework'...
Compiling './lib/python3.5/site-packages/framework/Host_Info_Tracker.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (Host_Info_Tracker.py, line 75)
Compiling './lib/python3.5/site-packages/framework/nodeinfo_parser.py'...
***   File "./lib/python3.5/site-packages/framework/nodeinfo_parser.py", line 9
    print doc
            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/framework/vmonere.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (vmonere.py, line 81)
Compiling './lib/python3.5/site-packages/framework/vmonere_command_line_utility.py'...
***   File "./lib/python3.5/site-packages/framework/vmonere_command_line_utility.py", line 24
    print "In Config domain"
                           ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/graph'...
Listing './lib/python3.5/site-packages/graph/jars'...
Listing './lib/python3.5/site-packages/graph/java'...
Listing './lib/python3.5/site-packages/guest'...
Compiling './lib/python3.5/site-packages/guest/vmonere_agent.py'...
***   File "./lib/python3.5/site-packages/guest/vmonere_agent.py", line 41
    print 'Host config file exists'
                                  ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/guest/vmonere_utility.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (vmonere_utility.py, line 50)
Listing './lib/python3.5/site-packages/host'...
Compiling './lib/python3.5/site-packages/host/start_host_monitor_process.py'...
***   File "./lib/python3.5/site-packages/host/start_host_monitor_process.py", line 29
    print 'Test Master'
                      ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/host/vmonere_start_monitor.py'...
***   File "./lib/python3.5/site-packages/host/vmonere_start_monitor.py", line 26
    print host_vm_dict
                     ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/host/vmonere_utility.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (vmonere_utility.py, line 51)
Compiling './lib/python3.5/site-packages/host/write_log.py'...
***   File "./lib/python3.5/site-packages/host/write_log.py", line 36
    print log_dict
                 ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/hostinfo'...
Listing './lib/python3.5/site-packages/lockfile'...
Listing './lib/python3.5/site-packages/lockfile-0.12.2.dist-info'...
Listing './lib/python3.5/site-packages/monitor'...
Listing './lib/python3.5/site-packages/monitor_logs'...
Listing './lib/python3.5/site-packages/monitor_logs/domain'...
Listing './lib/python3.5/site-packages/monitor_logs/host'...
Listing './lib/python3.5/site-packages/monitor_logs/json'...
Listing './lib/python3.5/site-packages/pexpect'...
Listing './lib/python3.5/site-packages/pexpect-4.3.1.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/ptyprocess'...
Listing './lib/python3.5/site-packages/ptyprocess-0.5.2.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/sockets'...
Compiling './lib/python3.5/site-packages/sockets/vmonere_listener.socket.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (vmonere_listener.socket.py, line 60)
Listing './lib/python3.5/site-packages/usr_bin'...
Listing './share'...
Listing './share/python-wheels'...
